# panzi-inotify

./: .gitignore  README.md  index.html  mkdoc.sh  mypy.ini  panzi_inotify.html  pyproject.toml  search.js  setup.cfg
.github/workflow/: tests.yml
.github/workflows/: tests.yml
examples/: basic.py  wait.py
panzi_inotify/: __init__.py  __main__.py  inotify.py  treenotify.py
tests/: conftest.py  test_inotify.py
