[project]
name = "panzi_inotify"
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
keywords = ["inotify"]
dynamic = ["version"]
[tool.setuptools.dynamic]
version = {attr = "panzi_inotify.__version__"}
[dependency-groups]
dev = [
    "mypy==1.19.*",
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["panzi_inotify"]
package-data = { panzi_inotify = ["py.typed"] }
